# esp32_ble_kb

./: .gitignore  CMakeLists.txt  README.md  ota_handler.py  partition.csv  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  ble_keyboard.c  esp_hidd_prf_api.c  esp_hidd_prf_api.h  hid.h  hid_dev.c  hid_dev.h  hid_device_le_prf.c  hid_host.c  hid_host.h  hid_usage_keyboard.h  hidd_le_prf_int.h  led_driver.c  led_driver.h  ota_manager.h
